--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nabu.data</groupId>
 	<artifactId>pdf</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>${nabu.data-pdf-version}</version>
 	<name>pdf</name>
 	
 	<parent>
